# yul-warp

./: .clang-format
warp/: .editorconfig  CMakeLists.txt  ERC20.sol  a  check.cpp  erc.cpp  loops.yul
warp/src/: AsmParser.cpp  AsmParser.h  ObjectParser.cpp  ObjectParser.h  Parser.h  library.cpp  prepass.h
